logs/Slang/generated/hdlconv/hdlconvertor_p184_2.sv.log
name: hdlconvertor_p184_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p184_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p184_2.sv:1:1: error: language feature not yet supported
class Big_Packet;
^~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p184_2.sv:4:9: error: expected identifier
function new();
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p184_2.sv:4:10: error: expected statement
function new();
         ^~~
